@@ -14,7 +14,7 @@ SUBROUTINE elphon()
   !
   USE kinds, ONLY : DP
   USE cell_base, ONLY : celldm, omega, ibrav
-  USE ions_base, ONLY : nat, ntyp => nsp, ityp, tau, pmass
+  USE ions_base, ONLY : nat, ntyp => nsp, ityp, tau, amass
   USE gvecs, ONLY: doublegrid
   USE fft_base, ONLY : dfftp, dffts
   USE noncollin_module, ONLY : nspin_mag
@@ -67,7 +67,7 @@ SUBROUTINE elphon()
   ! calculated in a previous run
   !
   IF (.NOT.trans) CALL readmat (iudyn, ibrav, celldm, nat, ntyp, &
-       ityp, omega, pmass, tau, xq, w2, dyn)
+       ityp, omega, amass, tau, xq, w2, dyn)
   !
   CALL stop_clock ('elphon')
   RETURN
