@@ -16,7 +16,7 @@ subroutine init_representations()
   !
   !
   USE kinds,         ONLY : DP
-  USE ions_base,     ONLY : tau, nat, ntyp => nsp, ityp, pmass
+  USE ions_base,     ONLY : tau, nat, ntyp => nsp, ityp, amass
   USE cell_base,     ONLY : at, bg
   USE io_global,     ONLY : stdout
   USE symm_base,     ONLY : nrot, nsym, sr, ftau, irt, t_rev, time_reversal, &
@@ -91,7 +91,7 @@ subroutine init_representations()
         call set_irr (nat, at, bg, xq, s, sr, tau, ntyp, ityp, ftau, invs, &
                     nsym, rtau, irt, irgq, nsymq, minus_q, irotmq, u, npert,  &
                     nirr, gi, gimq, iverbosity, u_from_file, w2, search_sym,  &
-                    nspin_mag, t_rev, pmass, num_rap_mode, name_rap_mode)
+                    nspin_mag, t_rev, amass, num_rap_mode, name_rap_mode)
         npertx = 0
         DO irr = 1, nirr
            npertx = max (npertx, npert (irr) )
