@@ -13,7 +13,6 @@ TODO LIST - August 2011
   1.0.0 At least Debian/RPM for Linux
 1.1 www.quantum-espresso.org:
   1.1.0 Better download page that allows selection of packages
-        (see 1.3.0)
   1.1.1 move to wordpress or whatever gives to developers better access
         to the contents 
   1.1.2 Move all contents of wiki into the new web site
@@ -93,7 +92,6 @@ TODO LIST - August 2011
         confusing and contains some suspect values.
   4.0.5 Martyna-Tuckerman has to be extended to any system dimensionality and to exx, using
         coulomb_vcut trick.
-  4.0.6 Better restart for Exx. Exx should restart from any stop point.
 
 4.1  New developments to be added (sooner or later):
   4.1.1 Moka structure builder + new xml input/output (RS)
