@@ -1,5 +1,6 @@
 Incompatible changes in svn version:
 
+   * atomic masses are in amu unless otherwise stated
    * Options 'cubic'/'hexagonal' to CELL_PARAMETERS removed: it is no 
      longer useful, the code will anyway find the correct sym.ops.
    * Options 'bohr'/'angstrom'/'alat' to CELL_PARAMETERS implemented
